      - New configuration option 'cupt::directory::state::snapshots'.
    - System:
      - Worker:
        - Removed "locking" /var/lib/dpkg/lock, it's useless (noop).
        - Implemented Cupt lock.
        - New method 'save_system_snapshot'.
        - New method 'remove_system_snapshot'.
        - New method 'rename_system_snapshot'.
      - Snapshots:
        - Introduced.
  * debian/control:
    - Added 'dpkg-dev' and 'dpkg-repack' to Suggests.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 24 Oct 2009 18:17:45 +0300

cupt (1.1.1) unstable; urgency=low

  * cupt:
    - 'search':
      - Fixed crash with '-n' option introduced in 1.1.0.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 23 Oct 2009 17:40:30 +0300

cupt (1.1.0) unstable; urgency=high

  * cupt:
    - Memoize parsed versions when managing packages and in shell mode.
      Reduced peak RAM usage by resolver. Reduced time spent in native
      resolver for non-trivial solutions.
    - Managing packages:
      - New option '--assume-yes|--yes|-y'.
    - New 'reinstall' subcommand.
  * Cupt:
    - Graph:
      - Introduced as reduced and optimized for Cupt re-implementation
        of some methods of Graph class.
    - System:
      - Worker:
        - Changed to work with Cupt::Graph module instead of CPAN Graph.
          Dramatically reduced time needed to generate dpkg call sequence in
          'change_system' method. Significantly reduced peak RAM usage in
          'change_system' method.
        - Honor the configuration option
          'cupt::worker::allow-indirect-upgrade' to work around packages with
          broken-by-design dependencies that make the package unupgradeable.
          Thanks to James Vega. Upload priority is set to 'high' due to this
          fix. (Closes: #551831)
      - Resolvers/Native:
        - Changed to work with Cupt::Graph module instead of CPAN Graph.
        - When determining whether related binary packages may be synchronized