@@ -15,6 +15,8 @@ cupt (1.2.0~) UNRELEASED; urgency=low
         - New method 'rename_system_snapshot'.
       - Snapshots:
         - Introduced.
+    - Cache:
+      - New method 'get_path_of_extended_states'.
   * debian/control:
     - Added 'dpkg-dev' and 'dpkg-repack' to Suggests.
 
